compiler/fir/analysis-tests/testData/resolve/topLevelDestructuring.kt
// RUN_PIPELINE_TILL: FRONTEND
val <!SYNTAX!>(x, y)<!> = <!UNRESOLVED_REFERENCE!>Pair<!>(1, 2)
val <!SYNTAX!>(e)<!> =<!SYNTAX!><!>
